# bbb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  goal.md  rust-toolchain.toml
crates/bbb-audio/: Cargo.toml
crates/bbb-audio/src/: command.rs  lib.rs  registry.rs  resolver.rs  runtime.rs
crates/bbb-audio/tools/: generate_sound_event_registry.py
crates/bbb-control/: Cargo.toml
crates/bbb-control/src/: exports.rs  lib.rs  server.rs  types.rs
crates/bbb-control/src/server/: params.rs  tests.rs
crates/bbb-control/src/types/: api.rs  audio.rs  net.rs  renderer.rs  snapshot.rs
crates/bbb-item-model/: Cargo.toml
crates/bbb-item-model/src/: ascii_font.rs  font.rs  item_runtime.rs  lib.rs  profile_resolver.rs  skin_runtime.rs
crates/bbb-item-model/src/font/: providers.rs
crates/bbb-item-model/src/item_runtime/: attributes.rs  icon.rs  icon_model.rs  mob_effects.rs  profile_skin.rs  profiles.rs  tables.rs  tests.rs  tooltip.rs
crates/bbb-native/: Cargo.toml
crates/bbb-native/src/: ascii_font.rs  audio_runtime.rs  banner_scene.rs  bed_scene.rs  bell_scene.rs  biome_tint.rs  block_outline.rs  camera_pose.rs  chest_scene.rs  code_of_conduct.rs  code_of_conduct_overlay.rs  conduit_scene.rs  crosshair.rs  debug_entries.rs  debug_profiler.rs  decorated_pot_scene.rs  enchanting_table_book_scene.rs  end_portal_scene.rs  entity_assets.rs  entity_scene.rs  hud_assets.rs  input.rs  item_entities.rs  item_frames.rs  item_models.rs  item_runtime.rs  lectern_book_scene.rs  main.rs  map_textures.rs  particle_registry.rs  particle_runtime.rs  profile_resolver.rs  recipe_book_ui.rs  runtime.rs  shulker_box_scene.rs  sign_scene.rs  skin_runtime.rs  skull_scene.rs  sky_assets.rs  spawner_scene.rs  (+2 more)
crates/bbb-native/src/audio_runtime/: random.rs  resolver.rs
crates/bbb-native/src/block_outline/: geometry.rs  shapes.rs  tests.rs
crates/bbb-native/src/entity_scene/: entity_data.rs  hands.rs  instance.rs  kind.rs  tests.rs  variants.rs
crates/bbb-native/src/input/: bundle.rs  commands.rs  inventory.rs  mouse.rs  movement.rs  tests.rs  text_edit.rs
crates/bbb-native/src/item_models/: dropped.rs  first_person.rs  tests.rs  transforms.rs
crates/bbb-native/src/item_runtime/: icon_model.rs  profile_skin.rs
crates/bbb-native/src/particle_runtime/: atlas.rs  block_map_color.rs  ids.rs  resolver_block_events.rs  resolver_core.rs  resolver_entity_events.rs  resolver_firework.rs  resolver_trial_vault.rs  tests.rs
crates/bbb-native/src/runtime/: control_requests.rs  events.rs  render_extract.rs  tests.rs
crates/bbb-native/src/terrain_runtime/: textures.rs
crates/bbb-net/: Cargo.toml
crates/bbb-net/src/: chunk_batch.rs  connection.rs  driver.rs  event_stream.rs  exports.rs  lib.rs  probe.rs  resource_pack.rs  status.rs  types.rs
crates/bbb-net/src/driver/: commands.rs
crates/bbb-net/src/event_stream/: configuration.rs  login.rs  play.rs
crates/bbb-net/src/probe/: configuration.rs  login.rs  play.rs
crates/bbb-net/src/types/: commands.rs  connection.rs  events.rs  probe.rs
crates/bbb-protocol/: Cargo.toml
crates/bbb-protocol/src/: codec.rs  component.rs  entity_types.rs  frame.rs  ids.rs  lib.rs  packets.rs
crates/bbb-protocol/src/packets/: chat.rs  chunks.rs  client_audio.rs  client_common.rs  client_features.rs  client_state.rs  client_ui.rs  command_suggestions.rs  commands.rs  connection.rs  data_components.rs  debug_game.rs  entities.rs  exports.rs  inventory.rs  maps.rs  merchant.rs  movement.rs  play_clientbound.rs  player_actions.rs  player_info.rs  profile_textures.rs  scoreboard.rs  server_presentation.rs  serverbound.rs  tags.rs  tests.rs  waypoints.rs  wire.rs  world_border.rs  world_effects.rs
crates/bbb-renderer/: Cargo.toml
crates/bbb-renderer/src/: block_destroy.rs  camera.rs  clouds.rs  counters.rs  debug_filled_boxes.rs  debug_textures.rs  entity_models.rs  exports.rs  frame_buffers.rs  generated_item.rs  gpu.rs  hud.rs  item_entities.rs  item_models.rs  lib.rs  lightmap.rs  offscreen.rs  outline.rs  particles.rs  pipeline_builder.rs  player_skin.rs  render.rs  renderer.rs  screenshot.rs  selection.rs  sky.rs  terrain.rs  transparency.rs  weather.rs  world_border.rs
crates/bbb-renderer/src/entity_models/: block_attachment.rs  catalog.rs  colored.rs  dispatch.rs  geometry.rs  gpu.rs  gui_preview.rs  held_item.rs  instances.rs  keyframe.rs  model.rs  model_layers.rs  tests.rs  textured.rs
crates/bbb-renderer/src/hud/: gpu.rs  layout.rs
crates/bbb-renderer/src/item_models/: map.rs  sign_text.rs
crates/bbb-renderer/src/particles/: descriptors.rs  gpu.rs  instance.rs  render.rs  tests.rs
crates/bbb-renderer/src/terrain/: mesh.rs
crates/bbb-world/: Cargo.toml
crates/bbb-world/benches/: entity_projection.rs
crates/bbb-world/data/: block_states_26_1.json
crates/bbb-world/src/: advancements.rs  banner_blocks.rs  bed_blocks.rs  bell_blocks.rs  block_events.rs  chest_lids.rs  chunks.rs  client.rs  client_hud.rs  client_state.rs  commands.rs  conduit_blocks.rs  counters.rs  decorated_pot_blocks.rs  diagnostics.rs  enchanting_table_books.rs  end_portal_blocks.rs  entities.rs  entity_state.rs  entity_status.rs  error.rs  exports.rs  fluid.rs  internal.rs  inventory.rs  item_profiles.rs  lectern_books.rs  level.rs  lib.rs  maps.rs  play_apply.rs  player_info.rs  position.rs  recipe_book.rs  recipes.rs  registries.rs  scoreboard.rs  server_presentation.rs  shulker_box_blocks.rs  sign_blocks.rs  (+7 more)
crates/bbb-world/src/chunks/: banner_patterns.rs  decode.rs  end_gateway.rs  heightmap.rs  light.rs  mod.rs  nbt.rs  palette.rs  pot_decorations.rs  sign_text.rs  spawner.rs  state.rs  store.rs  tests.rs  vault.rs
crates/bbb-world/src/client/: audio.rs  chat.rs  combat.rs  command_suggestions.rs  debug_game.rs  debug_query.rs  effects.rs  features.rs  hud.rs  inventory.rs  local_player.rs  local_player_collision.rs  local_player_destroy.rs  local_player_fluid.rs  local_player_movement.rs  mod.rs  player_info.rs  scoreboard.rs  server_presentation.rs  state.rs  stats.rs  ui.rs  waypoints.rs  world_border.rs
crates/bbb-world/src/entities/: dragon.rs  (+12 more)
(+359 files in other folders)
