[workspace]
resolver = "2"
members = [
    "crates/bbb-audio",
    "crates/bbb-native",
    "crates/bbb-platform",
    "crates/bbb-protocol",
    "crates/bbb-net",
    "crates/bbb-world",
    "crates/bbb-pack",
    "crates/bbb-renderer",
    "crates/bbb-control",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
bytes = "1"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
glam = "0.29"
hecs = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
kira = { version = "0.12.1", default-features = false, features = ["ogg", "vorbis"] }
md5 = "0.7"
pollster = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde"] }
wgpu = "0.19"
winit = "0.29"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.fast-test]
inherits = "dev"
opt-level = 0
debug = 1
incremental = true

[profile.fast-test.package."*"]
opt-level = 0

[profile.release]
lto = "thin"
codegen-units = 1
