[package]
name = "bbb-audio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["kira"]
kira = ["dep:kira"]
device = ["kira", "kira/cpal"]

[dependencies]
anyhow = { workspace = true }
kira = { workspace = true, optional = true }
serde = { workspace = true }
