[package]
name = "bbb-item-model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Exposes the `NativeItemRuntime` test constructors (`empty_for_test`,
# `for_test_with_registry_and_equipment_assets`) to downstream crates' tests
# without compiling them into production builds.
test-support = []

[dependencies]
anyhow = { workspace = true }
bbb-audio = { path = "../bbb-audio" }
bbb-pack = { path = "../bbb-pack" }
bbb-protocol = { path = "../bbb-protocol" }
bbb-renderer = { path = "../bbb-renderer" }
bbb-world = { path = "../bbb-world" }
chrono = { workspace = true }
chrono-tz = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
image = { workspace = true }
