[package]
name = "bbb-native"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "bbb-native"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bbb-audio = { path = "../bbb-audio", features = ["device"] }
bbb-control = { path = "../bbb-control" }
bbb-net = { path = "../bbb-net" }
bbb-pack = { path = "../bbb-pack" }
bbb-platform = { path = "../bbb-platform" }
bbb-protocol = { path = "../bbb-protocol" }
bbb-renderer = { path = "../bbb-renderer" }
bbb-world = { path = "../bbb-world" }
clap = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
