[package]
name = "bbb-renderer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
bbb-render-types = { path = "../bbb-render-types" }
bytemuck = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[dev-dependencies]
pollster = "0.3"
